--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fela": "^12.2.1",
+    "fela-plugin-custom-property": "^12.2.1",
+    "fela-plugin-embedded": "^12.2.1",
+    "fela-plugin-extend": "^12.2.1",
+    "fela-plugin-multiple-selectors": "^12.2.1",
+    "fela-plugin-named-keys": "^12.2.1",
+    "fela-plugin-responsive-value": "^12.2.1",
+    "fela-preset-web": "^12.2.1",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-fela": "^12.2.1",
+    "simple-xml-to-json": "^1.2.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "sass": "^1.83.4",
+    "eslint-config-next": "15.1.6"
   }
 }
