--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-fela": "^12.2.1",
-    "simple-xml-to-json": "^1.2.3"
+    "react-fela": "^12.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "sass": "^1.83.4",
-    "eslint-config-next": "15.1.6"
+    "eslint-config-next": "15.1.6",
+    "sass": "^1.83.4"
   }
 }
